--- a/style.css
+++ b/style.css
@@ -37,3 +37,25 @@ h6 {
 .last-row {
     border-bottom: 1px solid #DADADA;
 }
+
+#add-message {
+    margin-right: 15px;
+    width: 85%;
+    padding: 8px 5px;
+}
+
+#add-message:focus {
+    outline:0;
+}
+
+#btn-add {
+    border-color: #1E90FF;
+    border-radius: 5px;
+    color: #1E90FF;
+    font-size: 16px;
+    padding: 6px;
+}
+
+#btn-add:focus {
+    outline:0;
+}
