--- a/style.css
+++ b/style.css
@@ -59,3 +59,27 @@ h6 {
 #btn-add:focus {
     outline:0;
 }
+
+#search-message {
+    margin-left: 15px;
+    margin-right: 15px;
+    width: 60%;
+    padding: 8px 5px;
+}
+
+#search-message:focus {
+    outline:0;
+}
+
+#btn-search {
+    border-color: #1E90FF;
+    border-radius: 5px;
+    color: #1E90FF;
+    font-size: 16px;
+    padding: 6px;
+}
+
+#btn-search:focus {
+    outline:0;
+}
+
